# chug

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
migrations/2025-03-29-052602_create_installed_bottles/: down.sql  up.sql
migrations/2025-03-29-073555_create_linked_files/: down.sql  up.sql
migrations/2025-03-29-082057_rename_installed_to_downloaded/: down.sql  up.sql
migrations/2025-03-30-230650_create_dependencies/: up.sql
migrations/2025-04-07-070620_fix_foreign_keys/: down.sql  up.sql
src/: action_builder.rs  bottles.rs  cache.rs  dirs.rs  disk_cache.rs  extract.rs  formulae.rs  lib.rs  macho.rs  magic.rs  main.rs  status.rs  target.rs  tree.rs  validate.rs
src/db/: mod.rs  models.rs  schema.rs
src/extract/: macho.rs  mod.rs  validate.rs
tests/: add.rs  install.rs  output_dir.rs  remove.rs
