[package]
name = "chug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
data-encoding = "2.8.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
