[package]
name = "chug-cli"
version = "0.1.2"
edition = "2024"

description = "The fastest way to consume Homebrew bottles"
license = "MIT"
repository = "https://github.com/Benjamin-Davies/chug"

[[bin]]
name = "chug"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "https://github.com/Benjamin-Davies/chug/releases/latest/download/chug"
pkg-fmt = "bin"

[dependencies]
anyhow = "1.0.97"
arwen = "0.0.1"
clap = { version = "4.5.32", features = ["derive"] }
data-encoding = "2.8.0"
diesel = { version = "2.2.8", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
flate2 = "1.1.0"
goblin = "0.9.3"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
